# secure-cms

./: .gitignore  README.md  auth-context.js  docker-compose.yml  react-app-setup.js
.github/workflows/: docker-build.yml
backend/: .dockerignore  .env  .env.example  .env.test  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  contacts.py  tags.py  users.py
backend/app/core/: __init__.py  config.py  dependencies.py  security.py  security_enhancements.py
backend/app/db/: __init__.py  base.py  base_class.py  migrations.py  session.py  utils.py
backend/app/models/: __init__.py  contact.py  models.py  user.py
backend/app/schemas/: __init__.py  auth.py  base.py  contact.py  token.py  user.py
backend/app/services/: __init__.py  email.py  vcard_handler.py
backend/app/templates/email/: base.html
backend/tests/: .env.test  __init__.py  conftest.py  test_auth.py  test_base.py  test_contacts.py  test_settings.py  test_tags.py  test_users.py  utils.py
frontend/: Dockerfile  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.jsx
frontend/src/components/admin/: AuditLog.jsx  UserManagement.jsx
frontend/src/components/contacts/: ContactForm.jsx  ContactList.jsx  ImportExport.jsx
frontend/src/components/layout/: Navbar.jsx  Sidebar.jsx
frontend/src/components/profile/: Profile.jsx
frontend/src/components/search/: SearchBar.jsx
frontend/src/components/settings/: Settings.jsx
frontend/src/components/tags/: TagManagement.jsx
frontend/src/components/ui/: LoadingState.jsx  NotificationToast.jsx
frontend/src/styles/: globals.css
